--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -40,6 +40,15 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+
+    <a ui-sref="check-in">Checkin Page</a>
+
+    <a ui-sref="encounters">Encounters Page</a>
+
+    <a ui-sref="report">Report Page</a>
+    
+    <a ui-sref="report-filed">Report-filed Page</a>
+
     <div ui-view class="site-container"></div>
 
     <!-- build:js(src) scripts/vendor.js -->
@@ -56,7 +65,10 @@
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
     <script src="app/index.module.js"></script>
-    <script src="app/main/main.controller.js"></script>
+    <script src="app/main/MainCtrl.js"></script>
+    <script src="app/encounters/EncountersCtrl.js"></script>
+    <script src="app/Report/ReportCtrl.js"></script>
+    <script src="app/check-in/CheckinCtrl.js"></script>
     <script src="app/index.run.js"></script>
     <script src="app/index.route.js"></script>
     <script src="app/index.constants.js"></script>
