--- a/.tmp/serve/index.html
+++ b/.tmp/serve/index.html
@@ -41,13 +41,10 @@
     <![endif]-->
 
 
-    <a ui-sref="check-in">Checkin Page</a>
-
+    <!-- <a ui-sref="check-in">Checkin Page</a>
     <a ui-sref="encounters">Encounters Page</a>
-
     <a ui-sref="report">Report Page</a>
-
-    <a ui-sref="report-filed">Report-filed Page</a>
+    <a ui-sref="report-filed">Report-filed Page</a> -->
 
     <div ui-view class="site-container"></div>
 
